adjusting to original schema
